Add deploy script

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         written in Lit.
       </p>
       <p>Accompanying blog: TODO</p>
-
       <p>
         While the core is written to be extensive, this is still not! For now,
         the best bet to tinker would be to clone the backing repo. Don't forget
         to give a star if you think this deserves it!
       </p>
       <p>Interaction brought to you by AlpineJS</p>
+      <p>Your host is Saro @ Saravana kumar, and I am looking for a job right now!</p>
       <div style="display: flex; gap: 0.5em; flex-wrap: wrap">
         <div>
           <draw-venn value="A&cap;B" />
@@ -95,6 +95,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div>
+      <p> Initial Version: 25th July 2024 </p>
     </div>
     <script>
       document.addEventListener("alpine:init", () => {
